--- a/templates/id.phtml
+++ b/templates/id.phtml
@@ -29,27 +29,30 @@
     </nav>
 </header>
 
-<?php if ($flash) : ?>
-    <div class="alert alert-success" role="alert"><?= implode('', array_values($flash['success'])) ?></div>
-<?php endif ?>
+<?php if (!empty($flashMessages['success'])): ?>
+    <div class="alert alert-success" role="alert">
+        <?= $flashMessages['success'][0]?>
+    </div>
+<?php endif; ?>
+
 
 <main class="flex-grow-1">
     <div class="container-lg mt-3">
-        <h1>Сайт: <?= $name ?></h1>
+        <h1>Сайт: <?= $urlData['name'] ?></h1>
         <div class="table-responsive">
             <table class="table table-bordered table-hover text-nowrap" data-test="checks">
                 <tbody>
                 <tr>
                     <td>ID</td>
-                    <td><?= $id ?></td>
+                    <td><?= $urlData['id'] ?></td>
                 </tr>
                 <tr>
                     <td>Имя</td>
-                    <td><?= $name ?></td>
+                    <td><?= $urlData['name'] ?></td>
                 </tr>
                 <tr>
                     <td>Дата создания</td>
-                    <td><?= $created_at ?></td>
+                    <td><?= $urlData['created_at'] ?></td>
                 </tr>
                 </tbody>
             </table>
@@ -68,7 +71,7 @@
                 <th>description</th>
                 <th>Дата создания</th>
             </tr>
-            <?php foreach ($checks as $check) : ?>
+            <?php foreach ($urlChecks as $check) : ?>
                 <tr>
                     <td><?= $check['id'] ?></td>
                     <td><?= $check['status_code'] ?></td>
