--- a/templates/id.phtml
+++ b/templates/id.phtml
@@ -35,6 +35,24 @@
     </div>
 <?php endif; ?>
 
+<?php if (!empty($flashMessages['error'])): ?>
+    <div class="alert alert-danger" role="alert">
+        <?= $flashMessages['error'][0]?>
+    </div>
+<?php endif; ?>
+
+<?php if (!empty($flashMessages['successVerification'])): ?>
+    <div class="alert alert-success" role="alert">
+        <?= $flashMessages['successVerification'][0]?>
+    </div>
+<?php endif; ?>
+
+<?php if (!empty($flashMessages['errorVerification'])): ?>
+    <div class="alert alert-danger" role="alert">
+        <?= $flashMessages['errorVerification'][0]?>
+    </div>
+<?php endif; ?>
+
 
 <main class="flex-grow-1">
     <div class="container-lg mt-3">
@@ -58,7 +76,7 @@
             </table>
         </div>
         <h2 class="mt-5 mb-3">Проверки</h2>
-        <form class="mt-5 mb-3" method="post" action="/urls/<?= $id ?>/checks">
+        <form class="mt-5 mb-3" method="post" action="/urls/<?= $urlData['id'] ?>/checks">
             <input type="submit" class="btn btn-primary" value="Запустить проверку">
         </form>
         <table class="table table-bordered table-hover" data-test="check">
