Вывод в списке сайтов дату последней проверки рядом с каждым сайтом

--- a/templates/urls.phtml
+++ b/templates/urls.phtml
@@ -46,7 +46,7 @@
                     <tr>
                         <td><?= $url['id'] ?></td>
                         <td><a href="/urls/<?= $url['id'] ?>"><?= $url['name'] ?><a></td>
-                        <td><?= $url['created_at'] ?></td>
+                        <td><?= $url['last_check_at'] ?></td>
                         <td><?= $url['status_code'] ?></td>
                     </tr>
                 <?php endforeach; ?>
