--- a/templates/id.phtml
+++ b/templates/id.phtml
@@ -79,7 +79,7 @@
         <form class="mt-5 mb-3" method="post" action="/urls/<?= $urlData['id'] ?>/checks">
             <input type="submit" class="btn btn-primary" value="Запустить проверку">
         </form>
-        <table class="table table-bordered table-hover" data-test="check">
+        <table class="table table-bordered table-hover" data-test="checks">
             <tbody>
             <tr>
                 <th>ID</th>
