--- a/templates/id.phtml
+++ b/templates/id.phtml
@@ -79,6 +79,7 @@
         <form class="mt-5 mb-3" method="post" action="/urls/<?= $urlData['id'] ?>/checks">
             <input type="submit" class="btn btn-primary" value="Запустить проверку">
         </form>
+        //исправила
         <table class="table table-bordered table-hover" data-test="checks">
             <tbody>
             <tr>
