--- a/templates/id.phtml
+++ b/templates/id.phtml
@@ -58,7 +58,7 @@
     <div class="container-lg mt-3">
         <h1>Сайт: <?= $urlData['name'] ?></h1>
         <div class="table-responsive">
-            <table class="table table-bordered table-hover text-nowrap" data-test="checks">
+            <table class="table table-bordered table-hover text-nowrap" data-test="url">
                 <tbody>
                 <tr>
                     <td>ID</td>
