--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -23,7 +23,7 @@
                     <a class="nav-link active" href="/">Главная</a>
                 </li>
 
-                <li class="nav-item">getparsedbody php
+                <li class="nav-item">
                     <a class="nav-link" href="/urls">Сайты</a>
                 </li>
 
