--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -74,7 +74,7 @@
 <footer class="border-top py-3 mt-5 flex-shrink-0">
     <div class="container-lg">
         <div class="text-center">
-            Created by <a href="https://github.com/pbrackets" target="_blank">pbrackets</a>
+            <a href="https://hexlet.io/pages/about" target="_blank">Hexlet</a>
         </div>
     </div>
 </footer>
